--- a/index.html
+++ b/index.html
@@ -2,9 +2,12 @@
 <html>
    <head>
        <meta charset="UTF-8">
+             <meta name="viewport" content="width=device-width, initial-scale=1"/>
+
        <link rel="stylesheet" type="text/css" href="main.css">
-       <link rel="stylesheet" type="text/css" href="media.css">
+      
     <link rel="stylesheet" type="text/css" href="basic.css">
+       <link rel="stylesheet" type="text/css" href="media.css">
        <link href="https://fonts.googleapis.com/css?family=Slabo+27px" rel="stylesheet">
        <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,800" rel="stylesheet">
        <link href="https://fonts.googleapis.com/css?family=Stardos+Stencil:400,700" rel="stylesheet">
