--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
    <head>
        <meta charset="UTF-8">
-       <meta name="viewport" content="width=device-width, initial-scale=1.0">
+       
        <link rel="stylesheet" type="text/css" href="main.css">
        <link rel="stylesheet" type="text/css" href="media.css">
     <link rel="stylesheet" type="text/css" href="basic.css">
@@ -146,7 +146,7 @@ fully participate in our Guiding trips, no
 matter the destination. <span class="end-q-black">”</span><br><br><credit>—statement for the Girl Guides of Canada,
 March 15, 2017</credit></p3>
 
-        <p4 class="bline">
+        <p4 class="bline2">
        <h4>A NEW WRINKLE</h4> On March 21, US-bound travellers from 10 airports in Turkey, the Middle
 East and North Africa were banned from carrying large electronic
 devices on board, including tablets, laptops and Kindles. The Department
